incorporar readonly a la modal

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
           <div class="modal">
             <p>
               <h1>Calificacion 2</h1>
-              <div class="calif2" id="resultado2"></div> 
+              <div class="calif2" value="0" id="resultado2" readonly></div> 
               <h1>Calificacion 3</h1>
-              <div class="calif3" id="resultado3"></div></p>
+              <div class="calif3" value="0" id="resultado3" readonly></div></p>
               <h1>Calificacion 4</h1>
-              <div class="calif4" id="resultado4"></div></p>
+              <div class="calif4" value="0" id="resultado4" readonly></div></p>
               <h1>Calificacion 5</h1>
-              <div class="calif5" id="resultado5"></div></p>
+              <div class="calif5" value="0" id="resultado5" readonly></div></p>
               <h1>Promedio </h1>   
-              <div class="promedio" id="promedio"></div></p>
+              <div class="promedio" value="0" id="promedio" readonly></div></p>
 
 
             <button id="close" class="btn" onclick="limpiarCampos()">Cerrar</button>
