--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           <div class="modal">
             <p>
               <h1>Calificacion 2</h1>
-              <div class="calif2" value="0" id="resultado2" readonly></div> 
+              <div class="calif" value="0" id="resultado2" readonly></div> 
               <h1>Calificacion 3</h1>
-              <div class="calif3" value="0" id="resultado3" readonly></div></p>
+              <div class="calif" value="0" id="resultado3" readonly></div></p>
               <h1>Calificacion 4</h1>
-              <div class="calif4" value="0" id="resultado4" readonly></div></p>
+              <div class="calif" value="0" id="resultado4" readonly></div></p>
               <h1>Calificacion 5</h1>
-              <div class="calif5" value="0" id="resultado5" readonly></div></p>
+              <div class="calif" value="0" id="resultado5" readonly></div></p>
               <h1>Promedio </h1>   
               <div class="promedio" value="0" id="promedio" readonly></div></p>
 
