--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
         <h1>Parcial 3</h1>
         <input type="number" id="nota3" value="0" class="numero-input" onclick="limpiarCampo3()">
 
-
-
-
-
         <button id="Limpiar" class="btn" onclick="limpiarCampos()">Limpiar</button>
-        <button id="Calcular" class="btn" onclick="calcular()">Calcular</button>
+
+        
+        <button id="Calcular" class="btn" onclick="calcular()">
+          <div>
+            <span>
+              <p></p><p>Calcular</p><p></p>
+            </span>
+          </div>
+          <div>
+            <span>
+              <p>Suerte :D 🍀</p>
+            </span>
+          </div>
+        </button>
         
 
 
