--- a/index.html
+++ b/index.html
@@ -18,20 +18,7 @@
         <input type="number" id="nota3" value="0" class="numero-input" onclick="limpiarCampo3()">
 
         <button id="Limpiar" class="btn" onclick="limpiarCampos()">Limpiar</button>
-
-        
-        <button id="Calcular" class="btn" onclick="calcular()">
-          <div>
-            <span>
-              <p></p><p>Calcular</p><p></p>
-            </span>
-          </div>
-          <div>
-            <span>
-              <p>Suerte :D 🍀</p>
-            </span>
-          </div>
-        </button>
+        <button id="Calcular" class="btn" onclick="calcular()"><p></p><p>Calcular</p><p></p></button>
         
 
 
